--- a/Docker/Tomcat ARM/dockerfile
+++ b/Docker/Tomcat ARM/dockerfile
@@ -35,5 +35,6 @@ rm -rf  "tomcat/LICENSE" \
         "/var/cache/apk/*"
 
 ADD apitime.war /tomcat/webapps
-EXPOSE 8080
+ADD server.xml /tomcat/conf/server.xml
+EXPOSE 8084
 CMD ["/tomcat/bin/catalina.sh", "run"]
