--- a/Raspberry Pi/Config/Slave/HypriotOS/device-init.yaml
+++ b/Raspberry Pi/Config/Slave/HypriotOS/device-init.yaml
@@ -1,6 +1,6 @@
 #device-init.yaml on the pi /hypriot
 # hostname for your HypriotOS device
-hostname: amsterdam
+hostname: shanghai
 
 # optional wireless network settings
 wifi:
@@ -14,5 +14,4 @@ runcmd:
   - "sudo timedatectl set-timezone Etc/GMT-2"
   - "sudo cp /etc/dns.conf /etc/resolv.conf"
   - "sudo cp /etc/dns-host.conf /etc/hosts"
-  - "sudo hostapd -B /etc/hostapd/hostapd.conf"
   - "sudo docker restart registry"
