--- a/Docker/Api files/newsapi/dockerfile
+++ b/Docker/Api files/newsapi/dockerfile
@@ -3,13 +3,18 @@ FROM maxleiko/armhf-alpine-java:latest
 RUN apk update && \
 apk add ca-certificates && \
 update-ca-certificates && \
-wget https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.0.M20/bin/apache-tomcat-9.0.0.M20.tar.gz && \
-tar zxf apache-tomcat-*.tar.gz && \
-rm apache-tomcat-*.tar.gz && \
-mv apache-tomcat* tomcat
+wget https://github.com/INF2A/RPI-docker-cluster/raw/master/Docker/Apache%20tomcat/apache-tomcat-9.tar.gz && \
+tar zxf apache-tomcat-9.tar.gz && \
+rm apache-tomcat-9.tar.gz && \
+mv apache-tomcat* tomcat && \
 
-ADD calendar.war /tomcat/webapps
-ADD server.xml /tomcat/conf/server.xml
+wget https://github.com/INF2A/RPI-docker-cluster/raw/master/Docker/Api%20files/newsapi/newsapi.war && \
+mv newsapi.war /tomcat/webapps/ && \
+
+wget https://raw.githubusercontent.com/INF2A/RPI-docker-cluster/master/Docker/Api%20files/newsapi/server.xml && \
+mv server.xml /tomcat/conf/server.xml && \
+rm -rf  "/tmp/*" \
+        "/var/cache/apk/*"
 
 EXPOSE 8082
 CMD ["/tomcat/bin/catalina.sh", "run"]
