--- a/Docker/Api files/helloworldapi/dockerfile
+++ b/Docker/Api files/helloworldapi/dockerfile
@@ -9,7 +9,7 @@ rm apache-tomcat-9.tar.gz && \
 mv apache-tomcat* tomcat && \
 
 wget https://github.com/INF2A/RPI-docker-cluster/raw/master/Docker/Api%20files/helloworldapi/helloworldapi.war && \
-mv calendarapi.war /tomcat/webapps/ && \
+mv helloworldapi.war /tomcat/webapps/ && \
 
 wget https://raw.githubusercontent.com/INF2A/RPI-docker-cluster/master/Docker/Api%20files/helloworldapi/server.xml && \
 mv server.xml /tomcat/conf/server.xml && \
