--- a/Docker/Api files/helloworldapi/dockerfile
+++ b/Docker/Api files/helloworldapi/dockerfile
@@ -10,11 +10,12 @@ mv apache-tomcat* tomcat && \
 
 wget https://github.com/INF2A/RPI-docker-cluster/raw/master/Docker/Api%20files/helloworldapi/helloworldapi.war && \
 mv helloworldapi.war /tomcat/webapps/ && \
-
+    
 wget https://raw.githubusercontent.com/INF2A/RPI-docker-cluster/master/Docker/Api%20files/helloworldapi/server.xml && \
 mv server.xml /tomcat/conf/server.xml && \
+
 rm -rf  "/tmp/*" \
-        "/var/cache/apk/*" && \
-        
+"/var/cache/apk/*"
+
 EXPOSE 8080
 CMD ["/tomcat/bin/catalina.sh", "run"]
