--- a/Raspberry Pi/Config/Slave/root/etc/dns.conf
+++ b/Raspberry Pi/Config/Slave/root/etc/dns.conf
@@ -1,12 +1,2 @@
-127.0.0.1	localhost
-127.0.0.1	amsterdam # added by device-init
-192.168.1.1 amsterdam amsterdam.local
-192.168.1.2 shanghai shanghai.local
-192.168.1.3 chicago chicago.local
-192.168.1.4 santiago santiago.local
-192.168.1.5 marie marie.local
-192.168.1.6 melbourne melbourne.local
-192.168.1.7 johannesburg johannesburg.local
-::1		localhost ip6-localhost ip6-loopback
-ff02::1		ip6-allnodes
-ff02::2 ip6-allrouters
+nameserver	8.8.8.8 
+nameserver	8.8.4.4
