--- a/Docker/Api files/monitorapi/dockerfile
+++ b/Docker/Api files/monitorapi/dockerfile
@@ -1,11 +1,16 @@
+
 FROM maxleiko/armhf-alpine-java:latest
 
-RUN wget https://raw.githubusercontent.com/INF2A/RPI-docker-cluster/master/Docker/Api%20files/monitorapi/repositories && \
+RUN apk update && \
+apk add ca-certificates && \
+update-ca-certificates && \
+
+wget https://raw.githubusercontent.com/INF2A/RPI-docker-cluster/master/Docker/Api%20files/monitorapi/repositories && \
 mv repositories /etc/apk/ && \
 apk update && \
-apk add ca-certificates docker && \
-update-ca-certificates && \
+apk add docker && \
 rc-update add docker boot && \
+
 wget https://github.com/INF2A/RPI-docker-cluster/raw/master/Docker/Apache%20tomcat/apache-tomcat-9.tar.gz && \
 tar zxf apache-tomcat-9.tar.gz && \
 rm apache-tomcat-9.tar.gz && \
@@ -13,16 +18,12 @@ mv apache-tomcat* tomcat && \
 
 wget https://github.com/INF2A/RPI-docker-cluster/raw/master/Docker/Api%20files/monitorapi/monitorapi.war && \
 mv monitorapi.war /tomcat/webapps/ && \
-    
+
 wget https://raw.githubusercontent.com/INF2A/RPI-docker-cluster/master/Docker/Api%20files/monitorapi/server.xml && \
 mv server.xml /tomcat/conf/server.xml && \
 
 rm -rf  "/tmp/*" \
 "/var/cache/apk/*"
 
-EXPOSE 8080
+EXPOSE 8086
 CMD ["/tomcat/bin/catalina.sh", "run"]
-
-
-
-
