--- a/Raspberry Pi/Config/Master/HypriotOS/device-init.yaml
+++ b/Raspberry Pi/Config/Master/HypriotOS/device-init.yaml
@@ -16,4 +16,6 @@ runcmd:
   - "sudo cp /etc/dns-host.conf /etc/hosts"
   - "sudo hostapd -B /etc/hostapd/hostapd.conf"
   - "sudo docker restart registry"
+  - "sudo docker restart monitorapi"
+
 
